Fix alignment of remove sort option button

--- a/src/styles/filter.css
+++ b/src/styles/filter.css
@@ -310,4 +310,7 @@
 .delete_filter_button {
     background-color: inherit;
     border: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
